css/dashboard_mobile.css
/**** ./dashboard_mobile.css ***/
/***** MOBILE *****/
body.dashMobile {
    padding-left: 10px !important;
    padding-right: 10px !important;
}

body.dashMobile .navbar-fixed-top {
    margin-left: -10px;
    margin-right: -10px;
}

body.dashMobile section.dashCategory div.row.divider:first-of-type,
body.dashMobile section.dashCategory div.row:not(.divider):first-of-type {
    display: none;
}

/* Sun rise/set visibility on mobile */
body.dashMobile .tbSun,
body.dashMobile #tbSunGroup,
body.dashMobile #tbSunGroup * {
    color: var(--main-text-color) !important;
}

body.dashMobile section:first-of-type table.mobileitem {
    margin-top: 20px;
}

body.dashMobile table.mobileitem {
    width: 100%;
    padding: 0;
    margin-top: 10px;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
}

body.dashMobile table.mobileitem > thead > tr {
    background: none;
}

body.dashMobile table.mobileitem > thead > tr > th:first-of-type {
    font-family: main-font-bold;
    flex-grow: 1;
}

body.dashMobile table.mobileitem th {
    box-shadow: none;
    display: inline;
    text-shadow: none;
    background: var(--main-blue-color);
    color: #fff;
}

body.dashMobile table.mobileitem th:last-child a {
    color: #fff !important;
}

body.dashMobile table.mobileitem tr {
    background: var(--main-item-bg-color);
    display: flex;
    flex-grow: 1;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
}

body.dashMobile table.mobileitem td {
    display: inline-flex;
    color: var(--main-text-color);
    flex-grow: 1;
    flex-shrink: 1;
    align-items: center;
    padding: 5px!important;
    border-color: var(--main-bg-color);
}

body.dashMobile table.mobileitem td:last-child {
    font-family: main-font-bold;
    min-height: 25px;
}

body.dashMobile table.mobileitem td[colspan="2"]:last-child {
    padding-bottom: 0 !important;
    padding-top: 0 !important;
}

body.dashMobile table.mobileitem td[colspan="2"]:last-child > div {
    width: 100%;
}

body.dashMobile table.mobileitem td label {
    white-space: nowrap;
    height: 50%;
}

body.dashMobile table.mobileitem th img,
body.dashMobile table.mobileitem td#name img,
body.dashMobile table.mobileitem td.name img {
    display: none;
}

body.dashMobile table.mobileitem th a,
body.dashMobile table.mobileitem td#name a,
body.dashMobile table.mobileitem td.name a {
    color: var(--main-item-bg-color);
    background: var(--main-blue-color);
    text-decoration: none;
    border-radius: 50%;
    display: block;
    height: 18px;
    width: 18px;
    margin-right: 5px;
}

body.dashMobile table.mobileitem th a:after,
body.dashMobile table.mobileitem td#name a:after,
body.dashMobile table.mobileitem td.name a:after {
    content: "\2794";
    display: block;
    color: inherit;
    font-size: 12px;
    text-align: center;
    width: 18px;
}

body.dashMobile table.mobileitem td#status,
body.dashMobile table.mobileitem td.status {
    max-width: 60%;
    justify-content: flex-end;
    flex-grow: 1;
    flex-shrink: 1;
    text-align: end;
}

body.dashMobile table.mobileitem .status > span > span {
    margin-right: 7px;
}

body.dashMobile table.mobileitem .btn-group {
    white-space: normal;
    padding: 10px 5px;
    margin-top: 15px !important;
}

body.dashMobile table.mobileitem .btn-group .btn {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    font-family: main-font-bold;
    font-size: 10pt;
    margin-left: 2px !important;
    margin-bottom: 2px !important;
    border-radius: 1px !important;
}

body.dashMobile table.mobileitem .btn-mini {
    margin-left: 2px;
    font-family: main-font-bold;
    text-shadow: none;
    background: var(--main-item-bg-color) !important;
    background-image: none !important;
    border: 1px solid var(--main-blue-color);
    border-radius: 5px;
    color: var(--main-blue-color) !important;
    padding: 4px 10px !important;
    font-size: 12px;
    min-width: 40px;
    text-align: center;
    box-sizing: border-box;
}

body.dashMobile table.mobileitem .btn-mini.btn-info,
body.dashMobile table.mobileitem .btn-mini.active,
body.dashMobile table.mobileitem .btn-mini:active {
    background: var(--main-blue-color) !important;
    color: #fff !important;
    padding: 4px 10px !important;
}

body.dashMobile table.mobileitem .dimslider {
    background: rgba(0, 0, 0, 0.26);
    border: none;
    border-radius: 3px;
    box-shadow: none;
    height: 5px;
    margin-top: unset !important;
}

body.dashMobile table.mobileitem .dimslider .ui-slider-range {
    background: rgba(11, 151, 205, 0.5);
}

body.dashMobile table.mobileitem .dimslider .ui-slider-handle {
    width: 15px;
    height: 15px;
    background: var(--main-blue-color);
    border-radius: 50%;
    top: -6px;
}

body.dashMobile table.mobileitem .selectorlevels .ui-selectmenu-button {
    display: none;
}

body.dashMobile table.mobileitem .selectorlevels {
    margin-top: -30px !important;
    width: 100%;
}

body.dashMobile table.mobileitem .selectorlevels > select {
    padding: 0;
}

